--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,104 @@
-body {
+/* Normalise browser default setting opinionated */
+*,
+*::after,
+*::before {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+/******************************************/
+/* general default styling
+/******************************************/
+body {
+  font-family: "Lato", sans-serif;
+  font-size: 100%;
+  background-color: #f5f5f5;
+  color: #949292;
+}
+
+img {
+  max-width: 100%;
+}
+
+p,
+h1,
+h2 {
+  line-height: 1.5;
+}
+
+a:visited,
+a:active,
+a:link {
+  color: #d6a7a5;
+}
+
+/******************************************/
+/* Layout styling
+/******************************************/
+.container {
+  width: 100%;
+  margin: auto;
+}
+
+@media all and (min-width: 769px) {
+  .container {
+    width: 96%;
+  }
+}
+
+@media all and (min-width: 990px) {
+  .container {
+    width: 90%;
+  }
+}
+
+@media all and (min-width: 2000px) {
+  .container {
+    width: 1400px;
+  }
+}
+
+/******************************************/
+/* Loading screen and error component styling
+/******************************************/
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.loading-screen-container {
+  margin: 100px auto;
+  text-align: center;
+  font-size: 20px;
+  letter-spacing: 1.5;
+}
+.loading-screen-container span:last-child {
+  display: inline-block;
+  vertical-align: middle;
+  width: 30px;
+  height: 30px;
+  border: 3px dotted #777;
+  border-radius: 50%;
+  animation: rotate 0.4s infinite;
+  margin-left: 10px;
+}
+
+.error-container {
+  text-align: center;
+  margin: 100px;
+  font-size: 20px;
+}
+
+/******************************************/
+/* Helper class styling 
+/******************************************/
+.clearfix::after {
+  content: "";
+  display: block;
+  width: 100%;
+  clear: both;
 }
